k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: uffizzi/hello-world-k8s
        ports:
          - containerPort: 3000
