k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 3000
    name: http
  type: ClusterIP
  selector:
    app: web
