k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: uffizzi
  rules:
  - host: web.example.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - web.example.com
