k8s/web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 3000
    name: http
  type: ClusterIP
  selector:
    app: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: uffizzi
  rules:
  - host: web.example.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - web.example.com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ucluster-skaff-node-example
        ports:
          - containerPort: 3000
